parser/src/parser/snapshots/parser__parser__tests__hello_world.snap
---
source: parser/src/parser/tests.rs
expression: "(parsed_pretty, pretty_printed_source)"
---
(
    Ok([
        (
            FunctionDef(FunctionDef {
                decl: Normal(NormalDecl {
                    decl_spec: DeclSpec {
                        ty: Integer(IntTy { sign: Signed, kind: Int }),
                        attrs: "(empty)",
                    },
                    init_declarators: [
                        (
                            InitDecl {
                                declarator: Declarator {
                                    decl: WithParams {
                                        ident: ("main", 5..9),
                                        params: [],
                                    },
                                    pointer: false,
                                },
                                init: None,
                            },
                            5..9,
                        ),
                    ],
                }),
                body: [
                    (
                        Expr(
                            Postfix(ExprPostfix {
                                lhs: (Atom(Ident(("puts", 18..22))), 18..22),
                                op: Call([(Atom(String("Hello, world!")), 23..37)]),
                            }),
                        ),
                        22..39,
                    ),
                ],
            }),
            1..42,
        ),
    ]),
    "int main() {\n    puts(\"Hello, world!\")\n}\n",
)
