parser/src/parser/snapshots/parser__parser__tests__if_else_braceless.snap
---
source: parser/src/parser/tests.rs
expression: "(parsed_pretty, pretty_printed_source)"
---
(
    Ok([
        (
            FunctionDef(FunctionDef {
                decl: Normal(NormalDecl {
                    decl_spec: DeclSpec {
                        ty: Integer(IntTy(Signed, Int)),
                        attrs: "(empty)",
                    },
                    init_declarators: [
                        (
                            InitDecl {
                                declarator: Declarator {
                                    decl: WithParams {
                                        ident: (main, 5..9),
                                        params: [],
                                    },
                                    pointer: false,
                                },
                                init: None,
                            },
                            5..9,
                        ),
                    ],
                }),
                body: [
                    (
                        If {
                            cond: (Atom(Int(1)), 22..23),
                            then: [(Expr(Atom(String([97]))), 33..35)],
                            otherwise: Some([(Expr(Atom(String([98]))), 55..57)]),
                        },
                        18..35,
                    ),
                ],
            }),
            1..61,
        ),
    ]),
    "int main() {\n    if (1) {\n        \"a\"\n    } else {\n        \"b\"\n    }\n}\n",
)
